# python-template

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/rulesets/: default-branch.json
.github/workflows/: ci.yml
src/python_template/: __init__.py
tests/: test_greet.py
